--- a/index.html
+++ b/index.html
@@ -16,10 +16,134 @@
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
+    <!-- Bootstrap CDN -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
     <!-- CSS styles -->
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
+    <!-- header section -->
+    <header class="header">
+      <nav>
+        <div class="logo">Travel<span>Guide</span></div>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li>
+            <a href="#">Packages<i class="bx bx-caret-down"></i></a>
+          </li>
+          <li><a href="#">Transport</a></li>
+          <li><a href="#">Hotels</a></li>
+          <li><a href="#">Blogs</a></li>
+          <li><a href="#">Support</a></li>
+        </ul>
+      </nav>
+      <!-- overlay content -->
+      <div class="overlay">
+        <div class="content">
+          <h1>Travel</h1>
+          <h2>far enough,</h2>
+          <h1>You meet</h1>
+          <h2>yourself</h2>
+          <button class="enquiry-button" data-bs-toggle="modal" data-bs-target="#enquiryModal">ENQUIRY</button>
+        </div>
+      </div>
+    </header>
+    <!-- Enquiry Form Modal -->
+    <!-- Modal -->
+    <div
+      class="modal fade"
+      id="enquiryModal"
+      tabindex="-1"
+      aria-labelledby="enquiryModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="enquiryModalLabel">
+              Please share your details
+            </h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;></span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <form>
+              <div class="form-group">
+                <label for="name">Name</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="name"
+                  placeholder="Enter your name"
+                />
+              </div>
+              <div class="form-group">
+                <label for="email">Email</label>
+                <input
+                  type="email"
+                  class="form-control"
+                  id="email"
+                  placeholder="Enter your email"
+                />
+              </div>
+              <div class="form-group">
+                <label for="phone">Phone Number</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="phone"
+                  placeholder="Enter your phone number"
+                />
+              </div>
+              <div class="form-group">
+                <label for="preference">Your Preference</label>
+                <select class="form-control" id="preference">
+                  <option>Option 1</option>
+                  <option>Option 2</option>
+                  <option>Option 3</option>
+                </select>
+              </div>
+              <div class="form-group">
+                <label for="members">Number of Members</label>
+                <input
+                  type="number"
+                  class="form-control"
+                  id="members"
+                  placeholder="Enter number of members"
+                />
+              </div>
+              <div class="form-group">
+                <label for="message">Message</label>
+                <textarea
+                  class="form-control"
+                  id="message"
+                  rows="3"
+                  placeholder="Enter your message"
+                ></textarea>
+              </div>
+              <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
     
+    <!-- scripts -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
