added hero section with honeymoon destinations

--- a/index.html
+++ b/index.html
@@ -49,7 +49,13 @@
           <h2>far enough,</h2>
           <h1>You meet</h1>
           <h2>yourself</h2>
-          <button class="enquiry-button" data-bs-toggle="modal" data-bs-target="#enquiryModal">ENQUIRY</button>
+          <button
+            class="enquiry-button"
+            data-bs-toggle="modal"
+            data-bs-target="#enquiryModal"
+          >
+            ENQUIRY
+          </button>
         </div>
       </div>
     </header>
@@ -138,7 +144,80 @@
         </div>
       </div>
     </div>
-    
+    <!-- hero section -->
+    <section id="hero">
+      <div class="container">
+        <h2 class="text-center mt-5 mb-5">HONEYMOON PACKAGES</h2>
+        <div class="row">
+          <div class="col-md-3">
+            <div class="package-card">
+              <img
+                src="https://www.seasonzindia.com/images/packages/20191111070502_1573455902.jpg"
+                alt="kerala honeymoon"
+              />
+              <h2>Kerala Honeymoon Packages</h2>
+              <p class="duration">(04 Nights / 05 Days)</p>
+              <p>
+                A Honeymoon to Kerala reaffirms your belief in the notion why
+                this incredible place is called one of the paradises on earth
+                and called 'God's own country'.
+              </p>
+              <a href="#" class="btn">BOOK NOW</a>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="package-card">
+              <img
+                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSAIBuUttxVgJ9isuFhR9WW4Cshoyo6-qGjOA&s"
+                alt="Maldives honeymoon"
+              />
+              <h2>Maldives Honeymoon Packages</h2>
+              <p class="duration">(05 Nights / 05 Days)</p>
+              <p>
+                Make the journey to Goa onboard Cordelia Cruises as beautiful as
+                the destination. Premium Cruise with World class amenities.
+              </p>
+              <a href="#" class="btn">BOOK NOW</a>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="package-card">
+              <img
+                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTTvdk7UN20Ss4NRAlAcAUkuFsQCsXOEx83Ag&s"
+                alt="Manali honeymoon"
+              />
+              <h2>Manali Honeymoon Packages</h2>
+              <p class="duration">(07 Nights / 08 Days)</p>
+              <p>
+                A serene destination crowned by the snow-clad peaks of the
+                Himalayas, lush green hillsides, tall pine trees, pristine lakes
+                and verdant landscapes.
+              </p>
+              <a href="#" class="btn">BOOK NOW</a>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="package-card">
+              <img
+                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQywbHC0HrfbTwqw0w5Ym08XAAikpFOrDTSYw&s"
+                alt="Goa honeymoon"
+              />
+              <h2>Goa Honeymoon Packages</h2>
+              <p class="duration">(04 Nights / 05 Days)</p>
+              <p>
+                Make the journey to Goa onboard Cordelia Cruises as beautiful as
+                the destination. Premium Cruise with World class amenities.
+              </p>
+              <a href="#" class="btn">BOOK NOW</a>
+            </div>
+          </div>
+        </div>
+        <div class="d-flex justify-content-center mt-4">
+          <a href="#" class="more-packages">MORE PACKAGES</a>
+        </div>
+      </div>
+    </section>
+
     <!-- scripts -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
