added tours section with carousel slide of different festival in kerala

--- a/index.html
+++ b/index.html
@@ -217,7 +217,139 @@
         </div>
       </div>
     </section>
-     
+
+    <!--Tours section -->
+    <section class="container my-5 mb-5">
+      <h2 class="text-center mb-4">SPECIAL KERALA FESTIVAL TOURS</h2>
+      <!-- Carousel -->
+      <div
+        id="carouselExampleCaptions"
+        class="carousel slide"
+        dta-bs-ride="carousel"
+      >
+        <div class="carousel-indicators">
+          <button
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide-to="0"
+            class="active"
+            aria-current="true"
+            aria-label="Slide 1"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide-to="1"
+            aria-label="Slide 2"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide-to="2"
+            aria-label="Slide 3"
+          ></button>
+        </div>
+        <!-- Carousel inner part -->
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img
+              src="https://wallpapercave.com/wp/wp7889122.jpg"
+              class="d-block w-100 carousel-img"
+              alt="Onam Festival"
+            />
+            <div class="carousel-caption d-none d-md-block">
+              <h5>ONAM FESTIVAL</h5>
+              <p>
+                Onam is the most significant and vibrant festival of Kerala,
+                celebrated with great enthusiasm by Malayalis worldwide.
+              </p>
+              <button class="btn btn-primary more-details-btn">
+                More Details
+              </button>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img
+              src="https://wallpapercave.com/wp/wp9108655.jpg"
+              class="d-block w-100 carousel-img"
+              alt="Kerala Boat Race"
+            />
+            <div class="carousel-caption d-none d-md-block">
+              <h5>KERALA BOAT RACE</h5>
+              <p>
+                The Kerala Boat Race, also known as the Vallam Kali (boat game),
+                is a traditional and highly celebrated sporting event in the
+                Indian state of Kerala.
+              </p>
+              <button class="btn btn-primary more-details-btn">
+                More Details
+              </button>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img
+              src="https://wallpapercave.com/wp/wp7889092.jpg"
+              class="d-block w-100 carousel-img"
+              alt="Tiger Dance"
+            />
+            <div class="carousel-caption d-none d-md-block ">
+              <h5>PULIKALI</h5>
+              <p>
+                Pulikali, meaning "Tiger Dance," is a colorful and energetic
+                folk art performed during the Onam celebrations in Kerala
+              </p>
+              <button class="btn btn-primary more-details-btn">
+                More Details
+              </button>
+            </div>
+          </div>
+        </div>
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#carouselExampleCaptions"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#carouselExampleCaptions"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+      <!-- spacing to look good -->
+      <div class="mb-5"></div>
+      <!-- vid & img section -->
+      <div class="row">
+        <div class="col-md-6">
+          <iframe
+            width="100%"
+            height="315"
+            src="https://www.youtube.com/embed/R83BlU5nnbs?si=0UkJtFM9lDI1R6Fe"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin"
+            allowfullscreen
+          ></iframe>
+        </div>
+
+        <div class="col-md-6">
+          <img
+            src="https://media.licdn.com/dms/image/C5612AQE3idpTYeNekw/article-cover_image-shrink_600_2000/0/1629790305069?e=2147483647&v=beta&t=uXp27izgytjeLV-ZOsRMhNMrDRzPw93O59HFlLMlDUk"
+            alt="festival imgage"
+            class="img-fluid"
+          />
+        </div>
+      </div>
+    </section>
+
     <!-- scripts -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
