--- a/index.html
+++ b/index.html
@@ -371,7 +371,41 @@
     </section>
 
     <!-- Features section-->
-     
+     <section class="container my-5 mb-5">
+      <h2 class="text-center mb-4">OUR PREMIUM FEATURES</h2>
+
+      <div class="row">
+        <div class="col-md-3 ">
+          <div class="service-card p-4">
+            <img class="img-fluid"  src="https://go4customer.com/articleimages/1574235357telephone-customer-support.jpg" alt="customer support girl">
+            <h3 class="service-title">Customer Support</h3>
+            <a href="#" class="learn-more">Learn More</a>
+          </div>
+          
+        </div>
+        <div class="col-md-3 ">
+          <div class="service-card p-4">
+            <img class="img-fluid"  src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRpsY_qw-wJR4pfsHhHV6ED7jIbsABa9rf2xw&s" alt="taxi ride">
+            <h3 class="service-title">Free Taxi Ride</h3>
+            <a href="#" class="learn-more">Learn More</a>
+          </div>
+        </div>
+        <div class="col-md-3 ">
+          <div class="service-card p-4">
+            <img class="img-fluid"  src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSVGI8bCAdlx3oho0xpVRXAkt9uIzSLjtWTXA&s" alt="customer support girl">
+            <h3 class="service-title">Tour Guide</h3>
+            <a href="#" class="learn-more">Learn More</a>
+          </div>
+        </div>
+        <div class="col-md-3 ">
+          <div class="service-card p-4">
+            <img class="img-fluid"  src="https://media.istockphoto.com/id/1024667216/photo/the-five-people-rest-near-the-bonfire-evening-night-time.jpg?s=612x612&w=0&k=20&c=nVX3Rg5DbemJDfQMTVSnlb9Rm7p9irytM1fNU64d1R0=" alt="customer support girl">
+            <h3 class="service-title">Campfire</h3>
+            <a href="#" class="learn-more">Learn More</a>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- scripts -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
