--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
               data-bs-dismiss="modal"
               aria-label="Close"
             >
-              <span aria-hidden="true">&times;></span>
+              <span aria-hidden="true">&times;</span>
             </button>
           </div>
           <div class="modal-body">
@@ -406,6 +406,37 @@
         </div>
       </div>
     </section>
+
+    <!-- Customer Testimonial section -->
+     <section id="testimonials" class="py-5">
+      <div class="container">
+        <h2 class="text-center mb-5">Customer Testinmonials</h2>
+
+        <div class="row">
+          <div class="col-md-4">
+            <div class="testimonial-card p-4 text-center">
+              <img class="round-cricle mb-3" src="https://img.freepik.com/free-photo/smiling-businessman-face-portrait-wearing-suit_53876-148138.jpg" alt="Customer 1">
+              <p class="testimonial-text">"Amazing experience! The service was fantastic and I had the best vacation ever!"</p>
+              <h5 class="customer-name">Aarav Patel</h5>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="testimonial-card p-4 text-center">
+              <img class="round-cricle mb-3" src="https://img.freepik.com/free-photo/beautiful-female-half-length-portrait-isolated-young-emotional-indian-woman-dress-standing-crossing-hands-negative-space-facial-expression-human-emotions-concept_155003-18237.jpg" alt="Customer 2">
+              <p class="testimonial-text">"The trip was well-organized, and the customer service was exceptional."</p>
+              <h5 class="customer-name">Aanya Sharma</h5>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="testimonial-card p-4 text-center">
+              <img class="round-cricle mb-3" src="https://img.freepik.com/premium-photo/indian-woman-with-crossed-arms-wearing-formal-shirt_856987-1888.jpg" alt="Customer 3">
+              <p class="testimonial-text">"I had a wonderful time on my honeymoon! Everything was perfect!"</p>
+              <h5 class="customer-name">Meera Nair</h5>
+            </div>
+          </div>
+        </div>
+      </div>
+     </section>
     <!-- scripts -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
